select interest dropdown in alphabetical order, and fixed overflow-x issue in dropdown container

--- a/less/survey.less
+++ b/less/survey.less
@@ -37,9 +37,14 @@ label {
     align-items: center;
 }
 
+// i know this is not very graceful, please bear with me
 #interest-select > div > div > div > div {
     display: flex;
     margin: 5px;
+}
+
+#interest-select > div > div {
+    overflow-x: hidden;
 }
 
 #interest-select label {
